--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "fontgen-loader": "0.2.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "^2.30.1",
+    "i18next": "^10.4.1",
+    "i18next-resource-store-loader": "^0.1.2",
     "jsdom": "^9.8.3",
     "lodash": "^4.17.5",
     "lodash-webpack-plugin": "^0.11.4",
@@ -56,7 +58,7 @@
     "redux-form": "^7.2.3",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-logger": "^3.0.6",
-    "redux-manifest": "^1.0.6",
+    "redux-manifest": "^1.0.8",
     "redux-saga": "^0.16.0",
     "sass-loader": "^6.0.6",
     "snazzy": "^7.0.0",
