--- a/.babelrc
+++ b/.babelrc
@@ -19,15 +19,11 @@
   "compact": "true",
   "minified": "true",
   "plugins": [
-    "transform-object-rest-spread",
-    "lodash",
-    "transform-runtime"
+    "transform-object-rest-spread"
   ],
   "env": {
     "test": {
       "plugins": [
-        "transform-object-rest-spread",
-        "lodash",
         [ "babel-plugin-webpack-alias", { "config": "./webpack.config-test.babel.js" } ]
       ]
     }
